tests/negative/struct_errors/undefined_struct_field.nano
# Expected error: Undefined struct field
# Accessing non-existent field

struct Point {
    x: int,
    y: int
}

fn get_z(p: Point) -> int {
    # Error: Point has no field 'z'
    return p.z
}

shadow get_z {
    let p: Point = Point { x: 1, y: 2 }
    assert (== (get_z p) 0)
}

fn main() -> int {
    return 0
}

shadow main {
    assert (== (main) 0)
}
